--- a/index.html
+++ b/index.html
@@ -9,15 +9,23 @@
 </head>
 <body>
 
-	<h1>Password Generator</h1>
+	<div id="header">
+		<h1>Password Generator</h1>
+	</div>
 
 	<div id="main">
 		<input id="url" placeholder="URL"><br>
 		<input id="login" placeholder="login"><br>
-		<input id="master" placeholder="masterpass"><br><br>
+		<input id="master" placeholder="masterpass" type="password"><br>
+		<br>
 		<button id="genbtn" class="btn btn-primary">Generate</button>
+		<br><br>
+		<input id="pass" readonly>
+		<button id="copy" data-clipboard-target="#pass">copy</button>
 	</div>
 
+	<script src="js/clipboard.js"></script>
+	<script src="js/words.js"></script>
 	<script src="bundle.js"></script>
 	<!-- <script src="js/app.js"></script> -->
 </body>
